Phase 3 - Step 9: feat(queue): publish job image processing ke RabbitMQ
